--- a/Assignments/Asg2/CMakeLists.txt
+++ b/Assignments/Asg2/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
-project(Artificial_Intelligence_CSC3309_AUI)
+project(Asg2)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp)
-add_executable(Artificial_Intelligence_CSC3309_AUI/Asg2/ ${SOURCE_FILES})
+set(SOURCE_FILES main.cpp Node.h PegsLogicNode.h SearchEngine.h ExploredSet.h)
+add_executable(Asg2 ${SOURCE_FILES})
